--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -1,23 +1,20 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+<div class="card" >
+  <img class="card-img-top" src="/images/ejemplo1.jpg" alt="Card image cap">
+  <div class="card-block">
+    <h4 class="card-title">La ruta</h4>
+  </div>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+<div class="card" >
+  <img class="card-img-top" src="/images/ejemplo2.jpg" alt="Card image cap">
+  <div class="card-block">
+    <h4 class="card-title">del dinero</h4>
+  </div>
+</div>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div class="card" >
+  <img class="card-img-top" src="/images/ejemplo3.jpg" alt="Card image cap">
+  <div class="card-block">
+    <h4 class="card-title">K</h4>
+  </div>
 </div>
