--- a/client/app/styles/myStyle.css
+++ b/client/app/styles/myStyle.css
@@ -2,31 +2,88 @@
 }
 
 .navbar {
-
+  margin-bottom: 0px;
 }
 
+a{
+  color:inherit;
+}
+
+
+.container {
+   font: normal 19px/29px "Georgia";
+}
+h2{
+  margin-top:0px;
+}
+img{
+  max-width: 100%;
+  max-height: 100%;
+}
+#imgNoticia {
+  width: 500px;
+  height: 400px;
+  margin: 0 auto;
+}
 #titulo {
-  margin-bottom: 0;
+  margin-bottom: 0px;
   height: 200px;
   margin-top: -25px;
+  font-family: fantasy;
 }
 
-.card{
-  width:200px;
-  heigth:200px;
+.container-fluid{
+
+}
+
+.npCard{
+  width:100%;
+  height:100%;
   margin-right: 5px;
   margin-bottom: 5px;
-  float:left;
 }
-.card-img-top{
-  width: 198px;
-  height: 198px;
-}
+
 
 .card-title{
   text-align: center;
 }
-
 .card{
-   border: 1px solid black;
+  float: left;
+}
+
+.card-img-top-2{
+  height:100%;
+}
+
+#noticiasPrincipales{
+  height:400px;
+  width: 100%;
+  overflow: hidden;
+}
+
+#noticia1{
+  height: 45%;
+  width: 50%;
+  float:left;
+  padding-top: 5px;
+
+}
+
+#noticia2{
+  float:left;
+  height:45%;
+  width: 50%;
+  padding-top:5px;
+}
+
+#noticiaPrincipal{
+  height: 370px;
+  width: 50%;
+  float:left;
+}
+
+#masNoticias{
+
+  width: 100%;
+  height:100%;
 }
