--- a/client/app/views/noticias.html
+++ b/client/app/views/noticias.html
@@ -1,1 +1,12 @@
-<p>This is the noticias view.</p>
+<header style="text-align:center"> <!-- ng-app="clientApp" ng-controller="NoticiasCtrl"-->
+    <h2>Un futbolista serbio se tatuó a su mujer en el torso y estallaron los memes</h2>
+</header>
+<div class="image" id="imgNoticia">
+<img  src="/images/Noticia1.jpg" alt="Card image cap">
+</div>
+<div class="container">
+    <p><h4>
+      {{noticias}}
+    </h4></p>
+
+</div>
